# xfce4-helloworld-plugin

./: CMakeLists.txt  README
icons/: CMakeLists.txt
src/: CMakeLists.txt  hello-plugin.cpp  hello-plugin.desktop  register-plugin.c
